# sec-gate-oidc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  internes.md  run  sec-gate-oidc.pc.in
conf.d/cmake/: config.cmake
conf.d/project/tests/: oidc-start-apis.sh
data/: CMakeLists.txt  README.md  config.xml.in  manifest.yml.in
data/etc/: oidc-dex.json  oidc-google.json  oidc-local.json  oidc-oauth2.json
data/hidden/admin/: index.html
data/hidden/idps/common/: fedlink.html  login.html  register.html
data/hidden/idps/ldap/: login.html
data/hidden/idps/pam/: login.html
data/hidden/idps/pcsc-nfc/: login.html
data/hidden/public/: index.html
data/htdocs/: index.html
data/htdocs/confidential/: index.html
data/htdocs/idps/common/: error.html  login.html
data/htdocs/idps/pam/: login.html
data/htdocs/jscss/: sgate-binding.css  sgate-binding.js  sgate-glue.js  sgate-query.js
data/htdocs/private/: index.html
docs/: 1-architecture-presentation.md  2-installation-guide.md  3-configuration.md  4-sgate-svc-api.md  5-running-and-testing.md  api-services-book.yml
idps/: CMakeLists.txt  idp-builtin.c  idp-github.h  idp-ldap.h  idp-oidc.c  idp-oidc.h
libs/: CMakeLists.txt
libs/libcurl-glue/: CMakeLists.txt  curl-client.c  curl-glue.h  http-gluafb.c
libs/pcscd-client/: README.md  client-pcsc.c  pcsc-config.c  pcsc-config.h  pcsc-glue.c
plugins/: CMakeLists.txt
plugins/oidc-pam/: CMakeLists.txt  README.md  oidc-pam.c
plugins/oidc-pcsc/: CMakeLists.txt  oidc-pcsc.c
src/: CMakeLists.txt  oidc-alias.c  oidc-alias.h  oidc-apis.c  oidc-apis.h  oidc-builtin-idps.c  oidc-builtin-idps.h  oidc-common.h  oidc-core.c  oidc-core.h  oidc-defaults.h  oidc-fedid.c  oidc-fedid.h  oidc-idp.c  oidc-idp.h  oidc-idsvc.c  oidc-idsvc.h  oidc-session.c  oidc-session.h  oidc-utils.c  oidc-utils.h
src/builtin-idps/: CMakeLists.txt  idp-github.c  idp-ldap.c  idp-oidc.c
src/extension/: CMakeLists.txt  oidc-alias.c  oidc-alias.h  oidc-apis.c  oidc-apis.h  oidc-builtin-idps.c  oidc-builtin-idps.h  oidc-core.c  oidc-core.h  oidc-defaults.h  oidc-extension-main.c  oidc-fedid.c  oidc-fedid.h  oidc-idp-plugin.c  oidc-idp-plugin.h  oidc-idp.c  oidc-idp.h  oidc-idsvc.c  oidc-idsvc.h  oidc-session.c  oidc-session.h
src/extension/builtin-idps/: CMakeLists.txt  idp-github.c  idp-github.h  idp-ldap.c  idp-ldap.h  idp-oidc.c  idp-oidc.h
src/extension/builtin-idps/docs/: github-kickstart.md  ldap-kickstart.md  onelogin-kickstart.md  phantauth-kickstart.md
src/extension/lib/: CMakeLists.txt  oidc-session.c  oidc-session.h  oidc-utils.c
src/lib/: CMakeLists.txt  fedid-client.c  fedid-client.h  oidc-alias.c  oidc-alias.h  oidc-apis.c  oidc-apis.h  oidc-common.h  oidc-core.c  oidc-core.h  oidc-defaults.h  oidc-fedid.c  oidc-fedid.h  oidc-idp-plugin.c  oidc-idp-plugin.h  oidc-idp.c  oidc-idp.h  oidc-login.c  oidc-login.h  oidc-session.c  oidc-session.h  oidc-state.c  oidc-state.h  oidc-utils.c  oidc-utils.h
src/libcurl-glue/: CMakeLists.txt  curl-client.c  curl-glue.h  http-gluafb.c  http-glueafb.h
src/libs/libcurl-glue/: curl-client.c  curl-glue.h  http-gluafb.c
src/libs/pcscd-client/: CMakeLists.txt  pcsc-config.c
src/pcscd-client/: CMakeLists.txt  client-pcsc.c  pcsc-config.c  pcsc-config.h  pcsc-glue.c  pcsc-glue.h
src/pcscd-client/test/: simple-pcsc.json  simple-scard.json
src/plugins/oidc-pam/: CMakeLists.txt  README.md  oidc-pam.c
src/plugins/oidc-pcsc/: CMakeLists.txt  oidc-pcsc.c
tests/: README.md
vieutruc/project/etc/: oidc-google.json  oidc-local.json
